@@ -1,8 +1,10 @@
 MD5 78175e6cc7625d7e5e43dfce7e1c4394 ChangeLog 493
 MD5 4c1a45cfb328d9e83af7caaf066a378e vdrplugin-dxr3-0.2.1-r1.ebuild 1681
 MD5 61a19280db9d0ad3862f2d180b16da5f vdrplugin-dxr3-0.2.1.ebuild 1506
-MD5 39a14ebdea35823189da2d3b5a44f448 vdrplugin-dxr3-0.2.2.ebuild 1432
+MD5 917db829aff23af99b8b3d80caec67b0 vdrplugin-dxr3-0.2.2.ebuild 1436
+MD5 fd874683d3b5b39d755ab26dc763c58f vdrplugin-dxr3-0.2.2-r1.ebuild 1594
 MD5 2c6c3d65a5b98c96e92e793482401b75 files/digest-vdrplugin-dxr3-0.2.1 62
 MD5 2c6c3d65a5b98c96e92e793482401b75 files/digest-vdrplugin-dxr3-0.2.1-r1 62
-MD5 550fc715bdbd965a39de091bb1fe5130 files/dxr3_elchi.diff 518
 MD5 3a3fc96ad711ed1c598eade25a4835c7 files/digest-vdrplugin-dxr3-0.2.2 62
+MD5 550fc715bdbd965a39de091bb1fe5130 files/dxr3_elchi.diff 518
+MD5 40ef0d99d2bf73d653f7d4c543cd6259 files/digest-vdrplugin-dxr3-0.2.2-r1 130
