@@ -1,0 +1,2 @@
+MD5 0c41bd22687ebb3dc8bf87db0442f471 vdr-dxr3-0.2.2.tgz 62359
+MD5 587cfef8c2895b533a9d88c09442ec52 dxr3-plugin-0.2.2.patch.gz 323
